--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "start": "vite start",
+    "start": "vite start --host 0.0.0.0",
     "preview": "vite preview --host --open",
     "dev": "vite dev --host --open"
   },
