--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "dev": "vite dev",
     "build": "vite build",
-    "start": "bun run build/index.js",
-    "preview": "vite preview --host --open",
-    "dev": "vite dev --host --open"
+    "start": "bun run build/index.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^6.1.0",
