--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres:
+  database:
     image: postgres:14-alpine
     ports:
       - 5432:5432
@@ -12,10 +12,27 @@ services:
       # the top-level volume is empty.
       - ./setup/seed.sql:/docker-entrypoint-initdb.d/init_seed.sql
 
-  playground:
+  server:
+    depends_on:
+      - database
     build:
       dockerfile: Dockerfile
-    environment:
-      - DATABASE_URL=postgres://admin:password@postgres:5432/playground
     ports:
       - 8080:8080
+    environment:
+      - DATABASE_URL=postgres://admin:password@database:5432/playground
+
+  client:
+    restart: on-failure
+    depends_on:
+      - server
+    build:
+      context: ./client
+      dockerfile: local.Dockerfile
+    ports:
+      - 3000:3000
+      - 24678:24678
+    environment:
+      - SERVER_URL=http://server:8080
+    volumes:
+      - /usr/src/app/node_modules
