--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,8 +9,6 @@ RUN bun run build
 
 FROM oven/bun:distroless
 
-COPY --from=builder /usr/src/app/package.json ./
-COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/build ./build
 
-CMD ["bun", "run", "start"]
+CMD ["build/index.js"]
