--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 8080:8080
     environment:
       - DATABASE_URL=postgres://admin:password@database:5432/playground
+      - JWT_SECRET=secret
     volumes:
       # Source files for hot-reloading.
       - ../main.go:/server-local/main.go
@@ -41,7 +42,6 @@ services:
       - SERVER_URL=http://server:8080
     volumes:
       # Source files for hot-reloading.
-      # NOTE: Generated types are shared within the .svelte-kit folder so that
-      # needs to also be mounted.
+      # NOTE: Generated types are shared within the .svelte-kit folder.
       - ../client/.svelte-kit:/client-local/.svelte-kit
       - ../client/src:/client-local/src
