--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,7 +22,8 @@ services:
       - 8080:8080
     environment:
       - DATABASE_URL=postgres://admin:password@database:5432/playground
-      - JWT_SECRET=secret
+      - JWT_ACCESS_SECRET=access_secret
+      - JWT_REFRESH_SECRET=refresh_secret
     volumes:
       # Source files for hot-reloading.
       - ../main.go:/server-local/main.go
