--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ tower-http = { version = "0.6.6", features = ["trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 
+[dev-dependencies]
+axum-test = "18.2.1"
+
 [profile.release]
 opt-level = 3
 strip = true
