--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 8080:8080
     environment:
       - DATABASE_URL=postgres://admin:password@database:5432/playground
+      - PORT=8080
       - JWT_ACCESS_SECRET=access_secret
       - JWT_REFRESH_SECRET=refresh_secret
     volumes:
