--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,10 +21,11 @@ services:
     ports:
       - 8080:8080
     environment:
+      - LOG_LEVEL=debug
       - DATABASE_URL=postgres://admin:password@database:5432/playground
       - PORT=8080
-      - JWT_ACCESS_SECRET=access_secret
-      - JWT_REFRESH_SECRET=refresh_secret
+      - ACCESS_SECRET=access_secret
+      - REFRESH_SECRET=refresh_secret
     volumes:
       # Source files for hot-reloading.
       - ../src:/app/src
