refactor: runtime env

--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,11 +1,14 @@
 {
-  "semi": false,
-  "arrowParens": "avoid",
-  "tailwindStylesheet": "./src/app.css",
   "plugins": [
     "prettier-plugin-svelte",
     "prettier-plugin-tailwindcss",
-    "@trivago/prettier-plugin-sort-imports"
+    "prettier-plugin-brace-style",
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-merge"
   ],
+  "semi": false,
+  "arrowParens": "avoid",
+  "braceStyle": "allman",
+  "tailwindStylesheet": "./src/app.css",
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
