--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,10 +22,11 @@ services:
       - 8080:8080
     environment:
       - DATABASE_URL=postgres://admin:password@database:5432/playground
-      - ACCESS_SECRET=access_secret
-      - REFRESH_SECRET=refresh_secret
+      - TOKEN_SECRET=secret
     volumes:
       # Source files for hot-reloading.
+      - ../Cargo.lock:/app/Cargo.lock
+      - ../Cargo.toml:/app/Cargo.toml
       - ../src:/app/src
 
   client:
